--- a/prepare.html
+++ b/prepare.html
@@ -324,10 +324,10 @@
 </script>
   <script src="prepare/lodash-object.min.js"></script>
   <script src="prepare/satisfy.min.js"></script>
-  <script src="prepare/bonzo.min.js" defer="defer"></script>
-  <script src="prepare/alpine.min.js" defer="defer"></script>
+  <script src="lib/bonzo.min.js" defer="defer"></script>
+  <script src="lib/alpine.min.js" defer="defer"></script>
   <script src="prepare/namespace.js"></script>
-  <script src="prepare/app.js"></script>
+  <script src="lib/app.js"></script>
 <script type="text/javascript">
   setFromsConfirmation();
 </script>
