--- a/profile.html
+++ b/profile.html
@@ -185,7 +185,7 @@
   <script src="profile/bonzo.min.js" defer="defer"></script>
   <script src="profile/alpine.min.js" defer="defer"></script>
   <script src="profile/namespace.js"></script>
-  <script src="profile/app.js"></script>
+  <script src="./app.js"></script>
 <script type="text/javascript">
   setFromsConfirmation();
 </script>
