--- a/login.html
+++ b/login.html
@@ -21,8 +21,8 @@
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-  <link href="login/min.css" rel="stylesheet">
-  <link href="login/dev.css" rel="stylesheet">
+  <link href="../css/minificated.css" rel="stylesheet">
+  <link href="../css/additional.css" rel="stylesheet">
 </head><body>
 <nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="alarm alert alert-danger" role="alert" style="margin: 15px 0px; display: none;" x-data="error" x-show="message" x-text="message"></div>
@@ -104,11 +104,11 @@
   // }
 
 </script>
-<script type="text/javascript" src="login/bonzo.min.js" defer="defer"></script>
-<script type="text/javascript" src="login/alpine.min.js" defer="defer"></script>
-<script type="text/javascript" src="login/lodash-object.min.js"></script>
-<script type="text/javascript" src="login/namespace.js"></script>
-<script type="text/javascript" src="login/app.js"></script>
+<script type="text/javascript" src="./bonzo.min.js" defer="defer"></script>
+<script type="text/javascript" src="./alpine.min.js" defer="defer"></script>
+<script type="text/javascript" src="./lodash-object.min.js"></script>
+<script type="text/javascript" src="./namespace.js"></script>
+<script type="text/javascript" src="./app.js"></script>
 <script type="text/javascript">
   // App.Util.addEventListener(document, 'alpine:init', () => {
   //   App.lodash = _;
