--- a/prepare.html
+++ b/prepare.html
@@ -16,13 +16,13 @@
 <meta name="description" content="">
 <meta name="keywords" content="">
 <title></title>
-  <link href="prepare/min.css" rel="stylesheet">
-  <link href="prepare/dev.css" rel="stylesheet">
-  <link href="prepare/roulette.css" rel="stylesheet">
-  <link href="prepare/search.css" rel="stylesheet">
-  <link href="prepare/choices.css" rel="stylesheet">
-  <link href="prepare/newYear.css" rel="stylesheet">
-  <link href="prepare/stylesheet.css" rel="stylesheet">
+  <link href="../css/minificated.css" rel="stylesheet">
+  <link href="../css/main.css" rel="stylesheet">
+  <link href="../css/roulette.css" rel="stylesheet">
+  <link href="../css/search.css" rel="stylesheet">
+  <link href="../css/choices.css" rel="stylesheet">
+  <link href="../css/additional.css" rel="stylesheet">
+  <link href="../css/stylesheet.css" rel="stylesheet">
 </head><body class="">
 
 
@@ -298,7 +298,7 @@
 	</div>
 </form>
 
-<script src="prepare/payment-form.js"></script>
+<script src="lib/payment-form.js"></script>
 </div>            </div>
         </div>
     </div>
@@ -322,11 +322,11 @@
   // }
   //
 </script>
-  <script src="prepare/lodash-object.min.js"></script>
-  <script src="prepare/satisfy.min.js"></script>
+  <script src="lib/lodash-object.min.js"></script>
+  <script src="lib/satisfy.min.js"></script>
   <script src="lib/bonzo.min.js" defer="defer"></script>
   <script src="lib/alpine.min.js" defer="defer"></script>
-  <script src="prepare/namespace.js"></script>
+  <script src="lib/namespace.js"></script>
   <script src="lib/app.js"></script>
 <script type="text/javascript">
   setFromsConfirmation();
