--- a/profile.html
+++ b/profile.html
@@ -17,13 +17,13 @@
 <meta name="keywords" content="">
 <title></title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link href="profile/min.css" rel="stylesheet">
-  <link href="profile/dev.css" rel="stylesheet">
-  <link href="profile/roulette.css" rel="stylesheet">
-  <link href="profile/search.css" rel="stylesheet">
-  <link href="profile/choices.css" rel="stylesheet">
-  <link href="profile/newYear.css" rel="stylesheet">
-  <link href="profile/stylesheet.css" rel="stylesheet">
+  <link href="../css/minificated.css" rel="stylesheet">
+  <link href="../css/main.css" rel="stylesheet">
+  <link href="../css/roulette.css" rel="stylesheet">
+  <link href="../css/search.css" rel="stylesheet">
+  <link href="../css/choices.css" rel="stylesheet">
+  <link href="../css/additional.css" rel="stylesheet">
+  <link href="../css/stylesheet.css" rel="stylesheet">
 </head><body class="">
 
 
@@ -172,19 +172,19 @@
   </div>
 </footer>
 <script type="text/javascript">
-  function ping() {
-    var oReq = new XMLHttpRequest();
-    oReq.open("GET", "/ping");
-    oReq.send();
-    
-  }
+  // function ping() {
+  //   var oReq = new XMLHttpRequest();
+  //   oReq.open("GET", "/ping");
+  //   oReq.send();
+  //
+  // }
   
 </script>
-  <script src="profile/lodash-object.min.js"></script>
-  <script src="profile/satisfy.min.js"></script>
-  <script src="profile/bonzo.min.js" defer="defer"></script>
-  <script src="profile/alpine.min.js" defer="defer"></script>
-  <script src="profile/namespace.js"></script>
+  <script src="./lodash-object.min.js"></script>
+  <script src="./satisfy.min.js"></script>
+  <script src="./bonzo.min.js" defer="defer"></script>
+  <script src="./alpine.min.js" defer="defer"></script>
+  <script src="./namespace.js"></script>
   <script src="./app.js"></script>
 <script type="text/javascript">
   setFromsConfirmation();
