--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     <script src="scripts/index.js"></script>
     <title></title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="css/minificated.css" rel="stylesheet">
-    <link href="css/main.css" rel="stylesheet">
-    <link href="css/roulette.css" rel="stylesheet">
-    <link href="css/search.css" rel="stylesheet">
-    <link href="css/choices.css" rel="stylesheet">
-    <link href="css/additional.css" rel="stylesheet">
-    <link href="css/stylesheet.css" rel="stylesheet">
+    <link href="../css/minificated.css" rel="stylesheet">
+    <link href="../css/main.css" rel="stylesheet">
+    <link href="../css/roulette.css" rel="stylesheet">
+    <link href="../css/search.css" rel="stylesheet">
+    <link href="../css/choices.css" rel="stylesheet">
+    <link href="../css/additional.css" rel="stylesheet">
+    <link href="../css/stylesheet.css" rel="stylesheet">
 </head>
 <body class="">
 
