--- a/login.html
+++ b/login.html
@@ -21,8 +21,8 @@
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-  <link href="../css/minificated.css" rel="stylesheet">
-  <link href="../css/additional.css" rel="stylesheet">
+  <link href="./css/minificated.css" rel="stylesheet">
+  <link href="./css/additional.css" rel="stylesheet">
 </head><body>
 <nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="alarm alert alert-danger" role="alert" style="margin: 15px 0px; display: none;" x-data="error" x-show="message" x-text="message"></div>
