--- a/prepare.html
+++ b/prepare.html
@@ -16,13 +16,13 @@
 <meta name="description" content="">
 <meta name="keywords" content="">
 <title></title>
-  <link href="../css/minificated.css" rel="stylesheet">
-  <link href="../css/main.css" rel="stylesheet">
-  <link href="../css/roulette.css" rel="stylesheet">
-  <link href="../css/search.css" rel="stylesheet">
-  <link href="../css/choices.css" rel="stylesheet">
-  <link href="../css/additional.css" rel="stylesheet">
-  <link href="../css/stylesheet.css" rel="stylesheet">
+  <link href="./css/minificated.css" rel="stylesheet">
+  <link href="./css/main.css" rel="stylesheet">
+  <link href="./css/roulette.css" rel="stylesheet">
+  <link href="./css/search.css" rel="stylesheet">
+  <link href="./css/choices.css" rel="stylesheet">
+  <link href="./css/additional.css" rel="stylesheet">
+  <link href="./css/stylesheet.css" rel="stylesheet">
 </head><body class="">
 
 
