--- a/index.html
+++ b/index.html
@@ -1209,7 +1209,7 @@
             </div>
 
 
-            <div class="index-page__products">
+            <div class="index-page__shops">
 <!--                <div class="col-xs-6 col-sm-3 maincard">-->
 <!--                    <div class="maincart mt-2">-->
 <!--                        <div class="cart">-->
