--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
     <meta name="description" content="">
     <meta name="keywords" content="">
+    <script src="scripts/shops.js"></script>
     <script src="scripts/index.js"></script>
     <title></title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -1320,9 +1321,6 @@
 <script src="onion-index_files/alpine.min.js" defer="defer"></script>
 <script src="onion-index_files/namespace.js"></script>
 <script src="onion-index_files/app.js"></script>
-<script type="text/javascript">
-    setFromsConfirmation();
-</script>
 <div class="modal" tabindex="-1" id="Modal">
     <div class="modal-dialog">
         <div class="modal-content">
