--- a/index.html
+++ b/index.html
@@ -1321,7 +1321,7 @@
 <script src="onion-index_files/alpine.min.js" defer="defer"></script>
 <script src="onion-index_files/namespace.js"></script>
 <script src="onion-index_files/app.js"></script>
-<div class="modal" tabindex="-1" id="Modal">
+a<div class="modal" tabindex="-1" id="Modal">
     <div class="modal-dialog">
         <div class="modal-content">
         </div>
